# drone-swarm-orchestrator

./: .gitignore  404.html  API_STABILITY.md  ARCHITECTURE.md  CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  HOME.md  LICENSE  README.md  index.html  mav.tlog  mav.tlog.raw  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml
.github/: pull_request_template.md
ARCHITECTURE/: index.html
LITERATURE_REVIEW_PATH_PLANNING/: index.html
benchmarks/: scenarios.py
changelog/: index.html
contributing/: index.html
design/: API_DESIGN.md  BUSINESS_PLAN.md  COLLISION_AVOIDANCE_LITERATURE_REVIEW.md  COMMUNITY_LAUNCH.md  COMPELLING_PRODUCT_PLAN.md  DECISION_LOG.md  DEVELOPER_EXPERIENCE_DESIGN.md  FINAL_GAP_AUDIT.md  FORMATION_CONTROL_LITERATURE_REVIEW.md  GAP_ANALYSIS.md  GAP_AUDIT_SPRINT2.md  GLOSSARY.md  INTEGRATION_AUDIT.md  LITERATURE_REVIEW.md  MESH_NETWORK_DESIGN.md  OPERATIONS_DESIGN.md  PHASE2_ARCHITECTURE.md  PRESSURE_TEST.md  PRODUCT_SPEC.md  ROADMAP.md  SAFETY_LITERATURE_REVIEW.md  SECURITY_DESIGN.md  SPRINT_PLAN.md  STRATEGY_BIBLE.md  SWARM_ALGORITHMS_LITERATURE_REVIEW.md  SYSTEM_ARCHITECTURE.md  TASK_ALLOCATION_LITERATURE_REVIEW.md  TESTING_STRATEGY.md  UI_DESIGN.md  VISION_ALIGNMENT_AUDIT.md  wireframe-v2.html  wireframe-v3-markers.html  wireframe-v4-feeds.html  wireframe.html
docs/: ARCHITECTURE.md  LITERATURE_REVIEW_PATH_PLANNING.md  changelog.md  index.md  literature-review-swarm-communication.md
drone_swarm/: __init__.py  _version.py  allocation.py  anomaly.py  battery.py  behavior.py  benchmarks.py  cli.py  collision.py  config.py  drone.py  flight_log.py  formation_control.py  geo.py  geofence.py  health.py  mission_builder.py  missions.py  path_planner.py  safety.py  simulation.py  swarm.py  telemetry.py  viz.py  wind.py  (+1 more)
(+76 files in other folders)
